javacc/Skaner.java
/* Generated By:JavaCC: Do not edit this line. Skaner.java */
public class Skaner implements SkanerConstants {

  public static void main(String args[])
    throws ParseException, TokenMgrError {
    Skaner interpreter = new Skaner(System.in);

    System.out.println("Napisz, co mam przeskanowac?");

    String result = interpreter.Start();
    System.out.println ("Start returns: " + result);

  }

///////////////////////////////////////////////////////////////////////////////////////////
//Odtąd jest definicja parsera
  final public String Start() throws ParseException, NumberFormatException {
    String val="";
        String wynik="";
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMER:
      case WORD:
      case ENTER:
      case NOWALINIA:
      case MORETHANLITERA:
      case KRESKA:
      case HEADLINE:
      case URL:
      case EMAIL:
      case LINKO:
      case LINKC:
      case OBRO:
      case OBRC:
      case WYMIARY:
      case DOUBLE_SPACE:
      case LISTAN:
      case LISTAP:
      case BOLD:
      case ITALICS:
      case UNDERLINE:
      case NO_FORMAT:
      case MONO:
      case SPACE:
      case EMOTKA:
      case SYMBOL:
      case DIALOG:
      case DELO:
      case DELC:
      case SUPO:
      case SUPC:
      case SUBO:
      case SUBC:
      case CODEO:
      case CODEC:
      case QUOTEO:
      case QUOTEC:
      case FILEO:
      case FILEC:
      case NOWIKIO:
      case NOWIKIC:
      case FOOTNOTEO:
      case FOOTNOTEC:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      val = Expression();
     wynik = wynik + " " + val;
    }
    jj_consume_token(0);
  {if (true) return wynik;}
    throw new Error("Missing return statement in function");
  }

  final public String Expression() throws ParseException, NumberFormatException {
   Token t;
   String i;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOLD:
      t = jj_consume_token(BOLD);
  {if (true) return i = "BOLD";}
      break;
    case NO_FORMAT:
      t = jj_consume_token(NO_FORMAT);
  {if (true) return i = "NO_FORMAT";}
      break;
    case NOWIKIO:
      t = jj_consume_token(NOWIKIO);
  {if (true) return i = "NOWIKIo";}
      break;
    case NOWIKIC:
      t = jj_consume_token(NOWIKIC);
  {if (true) return i = "NOWIKIc";}
      break;
    case ITALICS:
      t = jj_consume_token(ITALICS);
  {if (true) return i = "ITALICS";}
      break;
    case NUMER:
      t = jj_consume_token(NUMER);
  {if (true) return i = "NUMER";}
      break;
    case WORD:
      t = jj_consume_token(WORD);
  {if (true) return i = "WORD";}
      break;
    case MONO:
      t = jj_consume_token(MONO);
  {if (true) return i = "MONO";}
      break;
    case ENTER:
      t = jj_consume_token(ENTER);
  {if (true) return i = "ENTER";}
      break;
    case DOUBLE_SPACE:
      t = jj_consume_token(DOUBLE_SPACE);
  {if (true) return i = "2X_SPACJA";}
      break;
    case UNDERLINE:
      t = jj_consume_token(UNDERLINE);
  {if (true) return i = "PODKRESLENIE";}
      break;
    case SPACE:
      t = jj_consume_token(SPACE);
  {if (true) return i = "SPACJA";}
      break;
    case MORETHANLITERA:
      t = jj_consume_token(MORETHANLITERA);
  {if (true) return i = "Superznak";}
      break;
    case SUPO:
      t = jj_consume_token(SUPO);
  {if (true) return i = "SUPo";}
      break;
    case SUPC:
      t = jj_consume_token(SUPC);
  {if (true) return i = "SUPc";}
      break;
    case SUBO:
      t = jj_consume_token(SUBO);
  {if (true) return i = "SUBo";}
      break;
    case SUBC:
      t = jj_consume_token(SUBC);
  {if (true) return i = "SUBc";}
      break;
    case DELO:
      t = jj_consume_token(DELO);
  {if (true) return i = "DELo";}
      break;
    case DELC:
      t = jj_consume_token(DELC);
  {if (true) return i = "DELc";}
      break;
    case NOWALINIA:
      t = jj_consume_token(NOWALINIA);
  {if (true) return i = "NOWALINIA";}
      break;
    case URL:
      t = jj_consume_token(URL);
  {if (true) return i = "URL";}
      break;
    case EMAIL:
      t = jj_consume_token(EMAIL);
  {if (true) return i = "EMAIL";}
      break;
    case LINKO:
      t = jj_consume_token(LINKO);
  {if (true) return i = "LINKo";}
      break;
    case LINKC:
      t = jj_consume_token(LINKC);
  {if (true) return i = "LINKc";}
      break;
    case OBRO:
      t = jj_consume_token(OBRO);
  {if (true) return i = "OBRo";}
      break;
    case OBRC:
      t = jj_consume_token(OBRC);
  {if (true) return i = "OBRc";}
      break;
    case WYMIARY:
      t = jj_consume_token(WYMIARY);
  {if (true) return i = "WYMIARY";}
      break;
    case LISTAN:
      t = jj_consume_token(LISTAN);
  {if (true) return i = "LISTAn";}
      break;
    case LISTAP:
      t = jj_consume_token(LISTAP);
  {if (true) return i = "LISTAp";}
      break;
    case KRESKA:
      t = jj_consume_token(KRESKA);
  {if (true) return i = "KRESKA";}
      break;
    case QUOTEO:
      t = jj_consume_token(QUOTEO);
  {if (true) return i = "QUOTEo";}
      break;
    case QUOTEC:
      t = jj_consume_token(QUOTEC);
  {if (true) return i = "QUOTEc";}
      break;
    case CODEO:
      t = jj_consume_token(CODEO);
  {if (true) return i = "CODEo";}
      break;
    case CODEC:
      t = jj_consume_token(CODEC);
  {if (true) return i = "CODEc";}
      break;
    case FILEO:
      t = jj_consume_token(FILEO);
  {if (true) return i = "FILEo";}
      break;
    case FILEC:
      t = jj_consume_token(FILEC);
  {if (true) return i = "FILEc";}
      break;
    case EMOTKA:
      t = jj_consume_token(EMOTKA);
  {if (true) return i = "EMOTKA";}
      break;
    case SYMBOL:
      t = jj_consume_token(SYMBOL);
  {if (true) return i = "SYMBOL";}
      break;
    case DIALOG:
      t = jj_consume_token(DIALOG);
  {if (true) return i = "DIALOG";}
      break;
    case FOOTNOTEO:
      t = jj_consume_token(FOOTNOTEO);
  {if (true) return i = "FOOTNOTEo";}
      break;
    case FOOTNOTEC:
      t = jj_consume_token(FOOTNOTEC);
  {if (true) return i = "FOOTNOTEc";}
      break;
    case HEADLINE:
      t = jj_consume_token(HEADLINE);
  {if (true) return i = "HEADLINE";}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public SkanerTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[2];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xffff5e36,0xffff5e36,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0xffff8,0xffff8,};
   }

  /** Constructor with InputStream. */
  public Skaner(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Skaner(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new SkanerTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Skaner(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new SkanerTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Skaner(SkanerTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(SkanerTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[52];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 2; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 52; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
